# commissaire-openstack

./: .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
commissaire_openstack/: __init__.py  opts.py  version.py
commissaire_openstack/api/: app.py  config.py  hooks.py  utils.py
commissaire_openstack/api/controllers/: link.py  root.py  types.py
commissaire_openstack/api/controllers/v1/: __init__.py  collection.py  commissaire_openstack_services.py
commissaire_openstack/api/middleware/: __init__.py  auth_token.py  parsable_error.py
commissaire_openstack/cmd/: api.py
commissaire_openstack/common/: clients.py  config.py  exception.py  i18n.py  keystone.py  paths.py  policy.py  service.py  short_id.py  utils.py
commissaire_openstack/conf/: __init__.py  opts.py
commissaire_openstack/hacking/: checks.py
commissaire_openstack/objects/: __init__.py  base.py  commissaire_openstack_service.py  fields.py
commissaire_openstack/service/: periodic.py
commissaire_openstack/tests/: base.py  conf_fixture.py  policy_fixture.py
commissaire_openstack/tests/contrib/: post_test_hook.sh
commissaire_openstack/tests/tempest/: README.rst  base.py  config.py  plugin.py
commissaire_openstack/tests/tempest/api/: clients.py
commissaire_openstack/tests/unit/: test_hacking.py  test_zun.py
commissaire_openstack/tests/unit/api/: base.py
commissaire_openstack/tests/unit/common/: test_clients.py  test_utils.py
commissaire_openstack/tests/unit/compute/: test_compute_manager.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/commissaire-openstack/: api-paste.ini  zun-config-generator.conf
releasenotes/source/: conf.py  index.rst
specs/: infrastructre-provisioning.rst
tools/: README-zun.conf.txt  gen-config  zun-config-generator.conf
(+20 files in other folders)
