[metadata]
name = commissaire_openstack
summary = Container Management service for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Commissaire_Openstack
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    commissaire_openstack

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = commissaire_openstack/locale
domain = commissaire_openstack

[update_catalog]
domain = commissaire_openstack
output_dir = commissaire_openstack/locale
input_file = commissaire_openstack/locale/commissaire_openstack.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = commissaire_openstack/locale/commissaire_openstack.pot

[entry_points]
console_scripts =
    commissaire-openstack-api = commissaire_openstack.cmd.api:main

oslo.config.opts =
    commissaire_openstack = commissaire_openstack.opts:list_opts
    commissaire_openstack.conf = commissaire_openstack.opts:list_opts

oslo.config.opts.defaults =
    commissaire_openstack = commissaire_openstack.common.config:set_cors_middleware_defaults

tempest.test_plugins =
    commissaire_openstack_tests = commissaire_openstack.tests.tempest.plugin:Commissaire_OpenstackTempestPlugin
